--- a/curiosidades.html
+++ b/curiosidades.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Ninjas</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <img src="img/print-ninja-logo.png" alt="Logo da Gráfica PrintNinja mostrando um desenho no estilo cartoon de um ninja" />
@@ -51,6 +52,6 @@
   <ul>
     <li>Site <a href="http://www.japaoemfoco.com/20-curiosidades-sobre-os-ninjas/">Japão em foco</a></li>
   </ul>
-  <em>Nota: a logomarca foi retirada do site da empresa <a href="http://www.printninja.com/">PrintNinja.com</a>, uma gráfica especializada em impressão de revistas em quadrinhos.</em>
+  <em class="nota">Nota: a logomarca foi retirada do site da empresa <a href="http://www.printninja.com/">PrintNinja.com</a>, uma gráfica especializada em impressão de revistas em quadrinhos.</em>
 </body>
 </html>
